--- a/lht_sept.html
+++ b/lht_sept.html
@@ -7,8 +7,8 @@
       Case Problem 2
 
       LHT September Schedule
-      Author: 
-      Date:   
+      Author: Riley Kneen-Teed
+      Date: 02/04/2023
 
       Filename:   lht_sept.html
 
