--- a/lht_sept.html
+++ b/lht_sept.html
@@ -73,9 +73,21 @@
    </article>
    <table id="Calendar">
       <caption>September 2021 Calendar</caption>
-
-
-
+      <colgroup>
+         <col class="weekdays" span="5">
+         <col class="weekends" span="2">
+       </colgroup>
+       <thead>
+         <tr>
+           <th>Sun</th>
+           <th>Mon</th>
+           <th>Tue</th>
+           <th>Wed</th>
+           <th>Thu</th>
+           <th>Fri</th>
+           <th>Sat</th>
+         </tr>
+       </thead>
    </table>
             
       
