--- a/lht_sept.html
+++ b/lht_sept.html
@@ -88,6 +88,217 @@
            <th>Sat</th>
          </tr>
        </thead>
+       <tbody>
+         <tr>
+         <td><h1>29</h1>
+             <dl>
+               <dt>Caron Quartet</dt>
+               <dd>1 pm</dd>
+               <dd>$12</dd>
+             </dl>
+         </td>
+         <td><h1>30</h1>
+             <dl>
+               <dt>Harlem Choir</dt>
+               <dd>8 pm</dd>
+               <dd>$18/$24/$32</dd>
+             </dl>
+         </td>
+         <td><h1>31</h1></td>
+         <td><h1>1</h1></td>
+         <td><h1>2</h1></td>
+         <td><h1>3</h1>
+             <dl>
+               <dt>Taiwan Acrobats</dt>
+               <dd>8 pm</dd>
+               <dd>$24/$32/$48</dd>
+             </dl>
+         </td>
+         <td><h1>4</h1>
+             <dl>
+               <dt>Joey Gallway</dt>
+               <dd>8 pm</dd>
+               <dd>$24/$32/$48</dd>
+             </dl>
+         </td>
+       </tr>
+       <tr>
+         <td><h1>5</h1>
+             <dl>
+               <dt>Carson Quartet</dt>
+               <dd>1 pm</dd>
+               <dd>$12</dd>
+             </dl>
+         </td>
+         <td><h1>6</h1></td>
+         <td><h1>7</h1>
+             <dl>
+               <dt>Ralph Williams</dt>
+               <dd>8 pm</dd>
+               <dd>$24/$36/$42</dd>
+             </dl>
+         </td>
+         <td><h1>8</h1></td>
+         <td><h1>9</h1>
+             <dl>
+               <dt>West Side Story</dt>
+               <dd>7 pm</dd>
+               <dd>$36/$48/$64</dd>
+             </dl>
+         </td>
+         <td><h1>10</h1>
+             <dl>
+               <dt>West Side Story</dt>
+               <dd>7 pm</dd>
+               <dd>$36/$48/$64</dd>
+             </dl>
+         </td>
+         <td><h1>11</h1>
+             <dl>
+               <dt>West Side Story</dt>
+               <dd>7 pm</dd>
+               <dd>$36/$48/$64</dd>
+             </dl>
+         </td>
+       </tr>
+       <tr>
+         <td><h1>12</h1>
+             <dl>
+               <dt>Carson Quartet</dt>
+               <dd>1 pm</dd>
+               <dd>$12</dd>
+             </dl>
+         </td>
+         <td><h1>13</h1></td>
+         <td><h1>14</h1></td>
+         <td><h1>15</h1>
+             <dl>
+               <dt>Chamberlain Symphony</dt>
+               <dd>8 pm</dd>
+               <dd>$18/$24/$32</dd>
+             </dl>
+         </td>
+         <td>
+            <h1>16</h1>
+            <dl>
+               <dt>Chamberlain Symphony</dt>
+               <dd>8 pm</dd>
+               <dd>$18/$24/$32</dd>
+            </dl>
+         </td>
+         <td>
+            <h1>17</h1>
+            <dl>
+               <dt>Edwin Drood</dt>
+               <dd>8 pm</dd>
+               <dd>$36/$48/$58</dd>
+            </dl>
+         </td>
+         <td>
+            <h1>18</h1>
+            <dl>
+               <dt>Edwin Drood</dt>
+               <dd>8 pm</dd>
+               <dd>$36/$48/$58</dd>
+            </dl>
+         </td>
+         <td>
+            <h1>19</h1>
+            <dl>
+               <dt>Carson Quartet</dt>
+               <dd>1 pm</dd>
+               <dd>$12</dd>
+            </dl>
+         </td>
+         </tr>
+         <tr>
+            <td>
+               <h1>20</h1>
+            </td>
+            <td>
+               <h1>21</h1>
+            </td>
+            <td>
+               <h1>22</h1>
+               <dl>
+                  <dt>Jazz Masters</dt>
+                  <dd>8 pm</dd>
+                  <dd>$18/$24/$32</dd>
+               </dl>
+            </td>
+            <td>
+               <h1>23</h1>
+            </td>
+            <td>
+               <h1>24</h1>
+               <dl>
+                  <dt>The Yearling</dt>
+                  <dd>7 pm</dd>
+                  <dd>$12/$18/$24</dd>
+               </dl>
+            </td>
+         </tr>
+         <tr>
+            <td>
+               <h1>25</h1>
+               <dl>
+                  <dt>An Ellington Tribute</dt>
+                  <dd>8 pm</dd>
+                  <dd>$24/$38/$48</dd>
+               </dl>
+            </td>
+            <td>
+               <h1>26</h1>
+               <dl>
+                  <dt>Carson Quartet</dt>
+                  <dd>1 pm</dd>
+                  <dd>$12</dd>
+               </dl>
+            </td>
+            <td>
+               <h1>27</h1>
+            </td>
+            <td>
+               <h1>28</h1>
+            </td>
+            <td>
+               <h1>29</h1>
+               <dl>
+                  <dt>Madtown Jugglers</dt>
+                  <dd>8 pm</dd>
+                  <dd>$12/$16/$20</dd>
+               </dl>
+            </td>
+         </tr>
+         <tr>
+            <td>
+               <h1>30</h1>
+               <dl>
+                  <dt>Othello</dt>
+                  <dd>8 pm</dd>
+                  <dd>$24/$36/$48</dd>
+               </dl>
+            </td>
+            <td>
+               <h1>1</h1>
+               <dl>
+                  <dt>Othello</dt>
+					<dd>8 pm</dd>
+					<dd>$24/$36/$48</dd>
+				</dl>
+			</td>
+			<td>
+				<h1>2</h1>
+				<dl>
+					<dt>Othello</dt>
+					<dd>8 pm</dd>
+					<dd>$24/$36/$48</dd>
+				</dl>
+			</td>
+		</tr>
+	</tbody>
+</table>
+               </tbody>
    </table>
             
       
