--- a/lht_sept.html
+++ b/lht_sept.html
@@ -90,31 +90,32 @@
        </thead>
        <tbody>
          <tr>
-         <td><h1>29</h1>
+            <td data-date="Sun, Aug 29, 2021"><h1>29</h1>
              <dl>
                <dt>Caron Quartet</dt>
                <dd>1 pm</dd>
                <dd>$12</dd>
              </dl>
          </td>
-         <td><h1>30</h1>
+         <td data-date="Mon, Aug 30, 2021"><h1>30</h1>
              <dl>
                <dt>Harlem Choir</dt>
                <dd>8 pm</dd>
                <dd>$18/$24/$32</dd>
              </dl>
          </td>
-         <td><h1>31</h1></td>
-         <td><h1>1</h1></td>
-         <td><h1>2</h1></td>
-         <td><h1>3</h1>
+         <td data-date="Tue, Aug 31, 2021"><h1>31</h1></td>
+         <td data-date="Wed, Sep 1, 2021"><h1>1</h1></td>
+         <td data-date="Thu, Sep 2, 2021"><h1>2</h1></td>
+         <td data-date="Fri, Sep 3, 2021"><h1>3</h1>
              <dl>
                <dt>Taiwan Acrobats</dt>
                <dd>8 pm</dd>
                <dd>$24/$32/$48</dd>
              </dl>
          </td>
-         <td><h1>4</h1>
+         <td data-date="Sat, Sep 4, 2021">
+            <h1>4</h1>
              <dl>
                <dt>Joey Gallway</dt>
                <dd>8 pm</dd>
@@ -123,37 +124,44 @@
          </td>
        </tr>
        <tr>
-         <td><h1>5</h1>
+         <td data-date="Sun, Sep 5, 2021">
+            <h1>5</h1>
              <dl>
                <dt>Carson Quartet</dt>
                <dd>1 pm</dd>
                <dd>$12</dd>
              </dl>
          </td>
-         <td><h1>6</h1></td>
-         <td><h1>7</h1>
+         <td data-date="Mon, Sep 6, 2021">
+            <h1>6</h1></td>
+            <td data-date="Tue, Sep 7, 2021">
+               <h1>7</h1>
              <dl>
                <dt>Ralph Williams</dt>
                <dd>8 pm</dd>
                <dd>$24/$36/$42</dd>
              </dl>
          </td>
-         <td><h1>8</h1></td>
-         <td><h1>9</h1>
+         <td data-date="Wed, Sep 8, 2021">
+            <h1>8</h1></td>
+            <td data-date="Thu, Sep 9, 2021">
+               <h1>9</h1>
              <dl>
                <dt>West Side Story</dt>
                <dd>7 pm</dd>
                <dd>$36/$48/$64</dd>
              </dl>
          </td>
-         <td><h1>10</h1>
+         <td data-date="Fri, Sep 10, 2021">
+            <h1>10</h1>
              <dl>
                <dt>West Side Story</dt>
                <dd>7 pm</dd>
                <dd>$36/$48/$64</dd>
              </dl>
          </td>
-         <td><h1>11</h1>
+         <td data-date="Sat, Sep 11, 2021">
+            <h1>11</h1>
              <dl>
                <dt>West Side Story</dt>
                <dd>7 pm</dd>
@@ -162,23 +170,27 @@
          </td>
        </tr>
        <tr>
-         <td><h1>12</h1>
+         <td data-date="Sun, Sep 12, 2021">
+            <h1>12</h1>
              <dl>
                <dt>Carson Quartet</dt>
                <dd>1 pm</dd>
                <dd>$12</dd>
              </dl>
          </td>
-         <td><h1>13</h1></td>
-         <td><h1>14</h1></td>
-         <td><h1>15</h1>
+         <td data-date="Mon, Sep 13, 2021">
+            <h1>13</h1></td>
+            <td data-date="Tue, Sep 14, 2021">
+               <h1>14</h1></td>
+               <td data-date="Wed, Sep 15, 2021">
+                  <h1>15</h1>
              <dl>
                <dt>Chamberlain Symphony</dt>
                <dd>8 pm</dd>
                <dd>$18/$24/$32</dd>
              </dl>
          </td>
-         <td>
+         <td data-date="Thu, Sep 16, 2021">
             <h1>16</h1>
             <dl>
                <dt>Chamberlain Symphony</dt>
@@ -186,7 +198,7 @@
                <dd>$18/$24/$32</dd>
             </dl>
          </td>
-         <td>
+         <td data-date="Fri, Sep 17, 2021">
             <h1>17</h1>
             <dl>
                <dt>Edwin Drood</dt>
@@ -194,7 +206,7 @@
                <dd>$36/$48/$58</dd>
             </dl>
          </td>
-         <td>
+         <td data-date="Sat, Sep 18, 2021">
             <h1>18</h1>
             <dl>
                <dt>Edwin Drood</dt>
@@ -204,7 +216,7 @@
          </td>
       </tr>
       <tr>
-         <td>
+         <td data-date="Sun, Sep 19, 2021">
             <h1>19</h1>
             <dl>
                <dt>Carson Quartet</dt>
@@ -212,13 +224,13 @@
                <dd>$12</dd>
             </dl>
          </td>
-            <td>
+         <td data-date="Mon, Sep 20, 2021">
                <h1>20</h1>
             </td>
-            <td>
+            <td data-date="Tue, Sep 21, 2021">
                <h1>21</h1>
             </td>
-            <td>
+            <td data-date="Wed, Sep 22, 2021">
                <h1>22</h1>
                <dl>
                   <dt>Jazz Masters</dt>
@@ -226,10 +238,10 @@
                   <dd>$18/$24/$32</dd>
                </dl>
             </td>
-            <td>
+            <td data-date="Thu, Sep 23, 2021">
                <h1>23</h1>
             </td>
-            <td>
+            <td data-date="Fri, Sep 24, 2021">
                <h1>24</h1>
                <dl>
                   <dt>The Yearling</dt>
@@ -237,7 +249,7 @@
                   <dd>$12/$18/$24</dd>
                </dl>
             </td>
-            <td>
+            <td data-date="Sat, Sep 25, 2021">
                <h1>25</h1>
                <dl>
                   <dt>An Ellington Tribute</dt>
@@ -247,7 +259,7 @@
             </td>
          </tr> 
          <tr>
-            <td>
+            <td data-date="Sun, Sep 26, 2021">
                <h1>26</h1>
                <dl>
                   <dt>Carson Quartet</dt>
@@ -255,13 +267,13 @@
                   <dd>$12</dd>
                </dl>
             </td>
-            <td>
+            <td data-date="Mon, Sep 27, 2021">
                <h1>27</h1>
             </td>
-            <td>
+            <td data-date="Tue, Sep 28, 2021">
                <h1>28</h1>
             </td>
-            <td>
+            <td data-date="Wed, Sep 29, 2021">
                <h1>29</h1>
                <dl>
                   <dt>Madtown Jugglers</dt>
@@ -269,7 +281,7 @@
                   <dd>$12/$16/$20</dd>
                </dl>
             </td>
-            <td>
+            <td data-date="Thu, Sep 30, 2021">
                <h1>30</h1>
                <dl>
                   <dt>Othello</dt>
@@ -277,7 +289,7 @@
                   <dd>$24/$36/$48</dd>
                </dl>
             </td>
-            <td>
+            <td data-date="Fri, Oct 1, 2021">
                <h1>1</h1>
                <dl>
                   <dt>Othello</dt>
@@ -285,7 +297,7 @@
 					<dd>$24/$36/$48</dd>
 				</dl>
 			</td>
-			<td>
+			<td data-date="Sat, Oct 2, 2021">
 				<h1>2</h1>
 				<dl>
 					<dt>Othello</dt>
